[package]
name = "deal-hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
error-chain = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tungstenite = { version = "0.17.2", features = ["native-tls"] }
url = "2.2.2"
axum = "0.5.11"
num_enum = "0.5.7"